force-app/main/default/objects/df_160_gld_specifik_gld__c/df_160_gld_specifik_gld__c.object-meta.xml
<CustomObject>
    <label>Specifik gæld</label>
    <nameField>
        <label>Specifik gæld Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specifik gælds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>