force-app/main/default/objects/df_160_gld_specifik_gld__c/fields/gld_gldsbelb__c.field-meta.xml
<CustomField>
    <fullName>gld_gldsbelb__c</fullName>
    <label>Gældsbeløb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>