force-app/main/default/objects/df_160_gld_specifik_gld__c/fields/gld_spec_kreditor_navn__c.field-meta.xml
<CustomField>
    <fullName>gld_spec_kreditor_navn__c</fullName>
    <label>Kreditor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>