force-app/main/default/objects/df_160_gld_specifik_gld__c/fields/gld_specifik_gld_form__c.field-meta.xml
<CustomField>
    <fullName>gld_specifik_gld_form__c</fullName>
    <label>Hvilken form for gæld?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gld_specifik_gld_af_spec_type</fullName>
                <label>Specifik type gæld</label>
            </value>
            <value>
                <fullName>gld_specifik_gld_spec_kreditor</fullName>
                <label>Gæld til specifik kreditor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>