force-app/main/default/objects/df_160_gld_specifik_gld__c/fields/gld_type_af_gld__c.field-meta.xml
<CustomField>
    <fullName>gld_type_af_gld__c</fullName>
    <label>Type af gæld</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>gld_type_gld_t_skat</fullName>
                <label>Gæld til skat</label>
            </value>
            <value>
                <fullName>gld_type_studiegld</fullName>
                <label>Studiegæld</label>
            </value>
            <value>
                <fullName>gld_type_forldre</fullName>
                <label>Gæld til forældre</label>
            </value>
            <value>
                <fullName>gld_type_spillegld</fullName>
                <label>Spillegæld</label>
            </value>
            <value>
                <fullName>gld_type_virksomhedsgld</fullName>
                <label>Virksomhedsgæld</label>
            </value>
            <value>
                <fullName>gld_type_forbrugsln</fullName>
                <label>Forbrugslån</label>
            </value>
            <value>
                <fullName>gld_type_andet</fullName>
                <label>Andet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>