force-app/main/default/objects/df_160_gld_specifik_gld__c/fields/gld_type_andet_text__c.field-meta.xml
<CustomField>
    <fullName>gld_type_andet_text__c</fullName>
    <label>Andet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>