force-app/main/default/objects/df_160_gld_specifik_gld__c/fields/uuid__c.field-meta.xml
<CustomField>
    <fullName>uuid__c</fullName>
    <label>uuid</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>